hphp/test/zend/good/Zend/tests/dynamic_call_001.php.expectf

Fatal error: Non-static method foo::foo() cannot be called statically in %s/dynamic_call_001.php on line 10
